--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .image-container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .image-container img {
+      width: 100%;
+      height: auto;
+      margin: 10px;
+    }
+
+    @media only screen and (min-width: 600px) {
+      .image-container img {
+        width: 48%;
+      }
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Test</p>
+    <div class="image-container">
+        <img src="rechts.png" alt="Bild 1">
+        <img src="links.png" alt="Bild 2">
+    </div>
 </body>
 </html>
